--- a/index.html
+++ b/index.html
@@ -5,12 +5,41 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" referrerpolicy="no-referrer" />
 </head>
 <body>
-    <input id="duration" value="30">
-    <button id="start">Start</button>
-    <button id="pause">Pause</button>
+        <!-- stroke-dasharray="" can have 2 properties, "1 10" for example -->
+        <!-- Perimeter = 2 * PI * radius, this case 2 * MATH.PI * 90 / 2 = half the circle
+        we can input that into stroke-dasharray="282" which gives us half the circle dashed -->
+        <!-- stroke-dashoffset="" little extra gap -->
+        <!-- stroke-dasharray="565" 
+        stroke-dashoffset="-30" -->
 
-    <script src="index.js"></script>
+        <div class="timer">
+            <div class="controls">
+              <input id="duration" value="3" />
+              <div>
+                <button id="start"><i class="fas fa-play"></i></button>
+                <button id="pause"><i class="fas fa-pause"></i></button>
+                <button id="refresh"><i class="fas fa-redo"></i></i></button>
+              </div>
+            </div>
+            <svg class="dial" id="dial">
+              <circle
+                fill="transparent"
+                stroke="black"
+                stroke-width="15"
+                r="190"
+                cx="0"
+                cy="200"
+                transform="rotate(-90 100 100)"
+              />
+            </svg>
+          </div>
+      
+          <script src="timer.js"></script>
+          <script src="index.js"></script>
+
 </body>
 </html>
